// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should fetch task warnings if it has to 1`] = `
<Modal
  contentLabel="warnings"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      warnings
    </h2>
  </header>
  <div
    className="modal-body modal-container js-analysis-warnings"
  >
    <DeferredSpinner
      loading={false}
    >
      <div
        className="panel panel-vertical"
        key="message foo"
      >
        <WarningIcon
          className="pull-left spacer-right"
        />
        <div
          className="overflow-hidden markdown"
        >
          <SafeHTMLInjection
            htmlAsString="message foo"
            sanitizeLevel={3}
          />
        </div>
      </div>
      <div
        className="panel panel-vertical"
        key="message-bar"
      >
        <WarningIcon
          className="pull-left spacer-right"
        />
        <div
          className="overflow-hidden markdown"
        >
          <SafeHTMLInjection
            htmlAsString="message-bar"
            sanitizeLevel={3}
          />
        </div>
      </div>
      <div
        className="panel panel-vertical"
        key="multiline message
secondline
  third line"
      >
        <WarningIcon
          className="pull-left spacer-right"
        />
        <div
          className="overflow-hidden markdown"
        >
          <SafeHTMLInjection
            htmlAsString="multiline message<br />secondline<br />  third line"
            sanitizeLevel={3}
          />
        </div>
      </div>
    </DeferredSpinner>
  </div>
  <footer
    className="modal-foot"
  >
    <ButtonLink
      className="js-modal-close"
      onClick={[MockFunction]}
    >
      close
    </ButtonLink>
  </footer>
</Modal>
`;

exports[`should render correctly: default 1`] = `
<Modal
  contentLabel="warnings"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      warnings
    </h2>
  </header>
  <div
    className="modal-body modal-container js-analysis-warnings"
  >
    <DeferredSpinner
      loading={false}
    >
      <div
        className="panel panel-vertical"
        key="foo"
      >
        <WarningIcon
          className="pull-left spacer-right"
        />
        <div
          className="overflow-hidden markdown"
        >
          <SafeHTMLInjection
            htmlAsString="warning 1"
            sanitizeLevel={3}
          />
        </div>
      </div>
      <div
        className="panel panel-vertical"
        key="foo"
      >
        <WarningIcon
          className="pull-left spacer-right"
        />
        <div
          className="overflow-hidden markdown"
        >
          <SafeHTMLInjection
            htmlAsString="warning 2"
            sanitizeLevel={3}
          />
        </div>
      </div>
    </DeferredSpinner>
  </div>
  <footer
    className="modal-foot"
  >
    <ButtonLink
      className="js-modal-close"
      onClick={[MockFunction]}
    >
      close
    </ButtonLink>
  </footer>
</Modal>
`;

exports[`should render correctly: do not show dismissable links for anonymous 1`] = `
<Modal
  contentLabel="warnings"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      warnings
    </h2>
  </header>
  <div
    className="modal-body modal-container js-analysis-warnings"
  >
    <DeferredSpinner
      loading={false}
    >
      <div
        className="panel panel-vertical"
        key="foo"
      >
        <WarningIcon
          className="pull-left spacer-right"
        />
        <div
          className="overflow-hidden markdown"
        >
          <SafeHTMLInjection
            htmlAsString="Lorem ipsum"
            sanitizeLevel={3}
          />
        </div>
      </div>
    </DeferredSpinner>
  </div>
  <footer
    className="modal-foot"
  >
    <ButtonLink
      className="js-modal-close"
      onClick={[MockFunction]}
    >
      close
    </ButtonLink>
  </footer>
</Modal>
`;

exports[`should render correctly: with dismissable warnings 1`] = `
<Modal
  contentLabel="warnings"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      warnings
    </h2>
  </header>
  <div
    className="modal-body modal-container js-analysis-warnings"
  >
    <DeferredSpinner
      loading={false}
    >
      <div
        className="panel panel-vertical"
        key="foo"
      >
        <WarningIcon
          className="pull-left spacer-right"
        />
        <div
          className="overflow-hidden markdown"
        >
          <SafeHTMLInjection
            htmlAsString="Lorem ipsum"
            sanitizeLevel={3}
          />
          <div
            className="spacer-top display-flex-inline"
          >
            <ButtonLink
              disabled={false}
              onClick={[Function]}
            >
              dismiss_permanently
            </ButtonLink>
          </div>
        </div>
      </div>
    </DeferredSpinner>
  </div>
  <footer
    className="modal-foot"
  >
    <ButtonLink
      className="js-modal-close"
      onClick={[MockFunction]}
    >
      close
    </ButtonLink>
  </footer>
</Modal>
`;
